# django-training

./: .gitignore  RESULTS.md  conftest.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0003_alter_album_is_approved.py  0004_remove_album_creation_datetime_album_created_and_more.py  0005_song.py
albums/templates/: createAlbum.html
albums/tests/: test_serializers.py  test_views.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py
artists/templates/: createArtist.html  listArtist.html
artists/tests/: test_views.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: conftest.py  test_views.py
members/: urls.py  views.py
members/templates/: login.html
musicplatform/: __init__.py  celery.py  settings.py  urls.py
users/: admin.py  models.py  permission.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
