[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["mahmoudmohamed57 <mahmoudmohamed572000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
djangorestframework = "^3.14.0"
drf-nested-routers = "^0.93.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
